	PR c++/40751 	PR c++/64987 	* decl.c (copy_type_enum): Respect TYPE_USER_ALIGN.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@232702 138bc75d-0d04-0410-961f-82ee72b054a4