gcc/testsuite/g++.dg/cpp0x/alignas5.C
@@ -1,0 +1,6 @@
+// { dg-do compile { target c++11 } }
+
+#define SA(X) static_assert(X,#X)
+
+enum alignas(16) E {};
+SA(alignof(E) == 16);
